Fixed alignment

--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ html {
     width: 35vw;
     height: 28vw;
 
-    margin-top: 20vh;
+    margin-top: 15vh;
     margin-left: 50vw;
 }
 
